--- a/.github/workflows/tag_release.yml
+++ b/.github/workflows/tag_release.yml
@@ -22,7 +22,7 @@ jobs:
         run: |
           # Check if any tags exist and get the latest
           if git fetch --tags && git describe --tags --abbrev=0; then
-            LATEST_TAG=$(git describe --tags --abbrev=0)
+            LATEST_TAG=$(git describe --tags --abbrev=0 | sed 's/^v//') # Remove the 'v' if present
             echo "Latest tag: $LATEST_TAG"
           else
             # If no tags exist, start from an initial version
@@ -62,7 +62,7 @@ jobs:
               ;;
           esac
 
-          NEW_TAG="v$MAJOR.$MINOR.$PATCH"
+          NEW_TAG="v$MAJOR.$MINOR.$PATCH" # Add the 'v' prefix here
           echo "New tag: $NEW_TAG"
           echo "NEW_TAG=$NEW_TAG" >> $GITHUB_ENV
         shell: bash
